# heatpump-mcp-server

./: .env.example  .env.production  .gitignore  DEPLOYMENT.md  DISCOVERY.md  Dockerfile  LICENSE  README-Remote.md  README.md  check_deployment.py  claude-desktop-config.json  deploy.sh  http-client-config.json  mcp.json  pyproject.toml  requirements.txt  run_tests.sh  server.py  server_http.py  simple_test.py  ssh_deploy.sh  test-hosted-mcp.py  test_mcp_compliance.py  test_server.py  verify_deployment.sh  vscode-mcp-config.json
config/: claude-desktop-config.json  http-client-config.json
docs/: README.md
docs/archive/: MCP_IMPROVEMENTS_SUMMARY.md
src/heatpump_mcp/: __init__.py  api_client.py  config.py  models.py  resources.py  server.py  tools.py
tests/: __init__.py  simple_test.py  test_e2e.py  test_mcp_deployment.py  test_mcp_quick.py  test_server.py  test_smoke_mcp.py
