[project]
name = "heatpump-mcp-server"
version = "1.0.0"
description = "Model Context Protocol server for professional heat pump sizing, cost estimation, and cold-climate performance verification"
authors = [
    {name = "WattSavy", email = "hello@wattsavy.com"}
]
license = {text = "MIT"}
readme = "README.md"
homepage = "https://www.wattsavy.com"
repository = "https://github.com/weiqi-anthropic/HeatPumpHQ"
keywords = ["mcp", "heat-pump", "hvac", "energy-efficiency", "residential", "calculations"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Home Automation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.4.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]